# dotfiles

./: .Xresources  .bash_logout  .bash_profile  .bashrc  .ctags  .devscripts  .gitconfig  .gitignore  .gitmodules  .inputrc  .irbrc  .pbuilderrc  .pythonrc  .pythonrc.py  .quiltrc  .screenrc  .sops.yaml  .tmux.conf  .vimrc  .xmobarrc  .xsettingsd  com.googlecode.iterm2.plist  default.nix  dunstrc.nix  eless.sh  emacs.nix  flake.nix  groups  home.nix  homedir.nix  install.sh  nixpkgs-overlays.nix  project.config  smartmon.sh
.bash_completion.d/: berkshelf-complete.sh
.bashrc.d/: gnome_terminal.sh  nix-ghc.sh
.emacs.d/: .gitignore  init.el
.ghc/: ghci.conf
.githooks/: ctags  post-rewrite  pre-commit
.gnupg/: gpg-agent.conf
.i3/: config
.nixpkgs/: config.nix  vimrc
.stack/: config.yaml
.vim/: bundles.vim  filetype.vim
.xmonad/: xmonad.hs
awesome/: debian  rc.lua
bashrc.d/: aliases.sh  prompt.sh  vterm.sh
cfg/: .Xresources  .bash_profile  .bashrc  .ctags  .devscripts  .dircolors  .gitconfig  .gvimrc  .inputrc  .pbuilderrc  .pythonrc.py  .quiltrc  .screenrc  .tmux.conf  .vimrc  .xmobarrc  .xprofile  .xsettingsd
iterm2/: Solarized (untagged).itermcolors  com.googlecode.iterm2.plist  (+1 more)
xmonad/: default.nix  shell.nix  xmonad-benley.cabal  xmonad-benley.nix  xmonad.hs
xmonad/src/XMonad/: Util.hs
xmonad/src/XMonad/Config/: DesktopCommon.hs  Plasma.hs
xmonad/src/XMonad/Config/Plasma/: Layers.hs  Util.hs
xmonad/src/XMonad/Hooks/: StateHook.hs
xmonad/src/XMonad/Layout/: BorderConfiguration.hs
xmonad/src/XMonad/Layout/Fullscreen/: NoBorders.hs
(+230 files in other folders)
